# expense_dashboard

./: README.md  constants.py  data.csv  generate_data.py  main.py  pyproject.toml
